fix: remove horizontal scrollbar and rounded class from first section image

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@ html {
 
   body {
     padding-right: 0 !important;  
+    overflow-x: hidden;
   }
   @layer base {
     html {
